fixed css styling issues on reports#stats view where new password blocks were not aligned properly, also modified button top height

--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -48,7 +48,7 @@
 }
 
 #report-options {
-  top: 630px;
+  top: 625px;
   left: 707px;
   position: absolute;  
 }
